// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Another Button with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello Button
</button>
`;
